gcc/testsuite/rust/rustc/ui/issues/issue-41776.rs
fn main() {
    include!(line!()); // { dg-error "" "" { target *-*-* } }
}

